update auth promotion
